--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,63 @@
 @import "tailwindcss";
+
+@theme inline {
+    --color-primary-50: #ecfdff;
+    --color-primary-100: #d0f6fd;
+    --color-primary-200: #a7edfa;
+    --color-primary-300: #4cd7f4;
+    --color-primary-400: #26c5ea;
+    --color-primary-500: #0aa8d0;
+    --color-primary-600: #0c86ae;
+    --color-primary-700: #116b8d;
+    --color-primary-800: #175873;
+    --color-primary-900: #184961;
+    --color-primary-950: #092f43;
+
+    --color-secondary-50: #f0fdf9;
+    --color-secondary-100: #ccfbef;
+    --color-secondary-200: #7bf3d7;
+    --color-secondary-300: #5eeace;
+    --color-secondary-400: #2dd4b8;
+    --color-secondary-500: #14b89f;
+    --color-secondary-600: #0d9483;
+    --color-secondary-700: #0f766a;
+    --color-secondary-800: #115e56;
+    --color-secondary-900: #134e48;
+    --color-secondary-950: #042f2c;
+
+    --color-success-50: #e9fff7;
+    --color-success-100: #cbffea;
+    --color-success-200: #9cfeda;
+    --color-success-300: #60f9ca;
+    --color-success-400: #1deab1;
+    --color-success-500: #00d29c;
+    --color-success-600: #00ab80;
+    --color-success-700: #00896a;
+    --color-success-800: #006c56;
+    --color-success-900: #005948;
+    --color-success-950: #003229;
+
+    --color-warning-50: #f9ffe7;
+    --color-warning-100: #eeffc1;
+    --color-warning-200: #e2ff85;
+    --color-warning-300: #d9ff40;
+    --color-warning-400: #dbff0c;
+    --color-warning-500: #dcf300;
+    --color-warning-600: #d0d200;
+    --color-warning-700: #a89c01;
+    --color-warning-800: #8a7909;
+    --color-warning-900: #75620e;
+    --color-warning-950: #443604;
+
+    --color-danger-50: #fdf2f6;
+    --color-danger-100: #fce7ef;
+    --color-danger-200: #fbcfe0;
+    --color-danger-300: #faa7c5;
+    --color-danger-400: #f5719e;
+    --color-danger-500: #ed467a;
+    --color-danger-600: #dc2656;
+    --color-danger-700: #bf173e;
+    --color-danger-800: #9e1634;
+    --color-danger-900: #84172f;
+    --color-danger-950: #500717;
+}
